Changes in Samsung Page

--- a/samsung.html
+++ b/samsung.html
@@ -16,18 +16,81 @@
     <header style="background-color: beige; padding: 1% 0">
         <div>
             <div class="row container-fluid">
-                <div class="col-lg-4" style="margin: auto"><span>Track Your Order</span></div>
-                <div class="col-lg-4" style="text-align: center">
+                <div class="col-lg-4 col-md-4 col-sm-4 header-track" style="margin: auto"><span>Track Your Order</span>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4" style="text-align: center">
                     <a style="text-decoration: none;" href="./index.html">
                         <h1><span style="color: red">Mobi</span><span style="color: blue">Store</span></h1>
                     </a>
                 </div>
-                <div class="col-lg-4" style="text-align: right; margin: auto"><i
+                <div class="col-lg-4 col-md-4 col-sm-4 header-icons" style="text-align: right; margin: auto"><i
                         class="fas fa-shopping-cart fa-lg"></i>&nbsp&nbsp&nbsp&nbsp&nbsp<i
                         class="fas fa-user-circle fa-lg"></i></div>
             </div>
         </div>
     </header>
+
+    <section>
+        <div class="container" style="position: relative;">
+            <img src="https://images.samsung.com/is/image/samsung/assets/pk/p6_gro3/p6_initial_pfs/p6_initial_mobile/P6_PFS_1440X640_Canvas_5G_01.png?$ORIGIN_PNG$"
+                style="width: 100%;" alt="">
+            <div class="carousel-txt">
+                <h1>Galaxy Note 20|</h1>
+                <h1>20 Ultra</h1>
+            </div>
+        </div>
+    </section>
+
+    <!-- Mobile Section -->
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-6 mobile">
+                    <h3>Samsung Galaxy A01</h3>
+                    <img src="./images/Samsung-Galaxy-A01.jpg" alt="">
+                    <p>Samsung Galaxy A01 (4GB RAM)(64GB ROM) - red version</p>
+                    <p>Price: $200</p>
+                    <button type="button" class="btn btn-primary">Buy</button>
+                </div>
+                <div class="col-lg-3 col-md-6 mobile">
+                    <h3>Samsung Galaxy 9</h3>
+                    <img src="./images/Samsung-Galaxy 9.jpeg" alt="">
+                    <p>Samsung Galaxy A01 (4GB RAM)(64GB ROM) -blue version</p>
+                    <p>Price: $400</p>
+                    <button type="button" class="btn btn-primary">Buy</button>
+                </div>
+                <div class="col-lg-3 col-md-6 mobile">
+                    <h3>Samsung Note 10</h3>
+                    <img src="./images/Samsung-galaxy-note10.png" alt="">
+                    <p>Samsung Galaxy Note 10 (8GB RAM)(256GB ROM) -blue version</p>
+                    <p>Price: $1280</p>
+                    <button type="button" class="btn btn-primary">Buy</button>
+                </div>
+                <div class="col-lg-3 col-md-6 mobile">
+                    <h3>Samsung Galaxy S10</h3>
+                    <img src="./images/Samsung-galaxy-S10.png" alt="">
+                    <p>Samsung Galaxy S10 (4GB RAM)(64GB ROM) -black version</p>
+                    <p>Price: $400</p>
+                    <button type="button" class="btn btn-primary">Buy</button>
+                </div>
+                <div class="col-lg-3 col-md-6 mobile">
+                    <h3>Samsung Galaxy A01</h3>
+                    <img src="./images/Samsung-Galaxy-A01.jpg" alt="">
+                    <p>Samsung Galxy A01 (4GB RAM)(64GB ROM) -black version</p>
+                    <p>Price: $400</p>
+                    <button type="button" class="btn btn-primary">Buy</button>
+                </div>
+                <div class="col-lg-3 col-md-6 mobile">
+                    <h3>Samsung S10 lite</h3>
+                    <img src="./images/Samsung-Galaxy-S10 lite.jpeg" alt="">
+                    <p>Samsung Galxy S10 lite (6GB RAM)(128GB ROM) -black version</p>
+                    <p>Price: $400</p>
+                    <button type="button" class="btn btn-primary">Buy</button>
+                </div>
+
+            </div>
+        </div>
+    </section>
 
     <footer style="margin-top: 3%">
         <br />
