--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <!-- HEADER SECTION -->
-  <header style="background-color: beige; padding: 1% 0">
+  <header style="background-color:grey; padding: 1% 0">
     <div>
       <div class="row container-fluid">
         <div class="col-lg-4" style="margin: auto"><span>Track Your Order</span></div>
