changing iphone's page

--- a/iphone.html
+++ b/iphone.html
@@ -29,7 +29,13 @@
             </div>
         </div>
     </header>
-    
+    <section id="themain" >
+        <div style=" margin-left: 25%;" >
+  <img src="./images/thereal.jpg" style="width:700px; height:400px;" alt="">
+     </div>
+
+    </section>
+
     <!--The grid system-->
    <section style="height:500px">
     <div class="container-fluid">
