Changes in Products Page

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6" style="text-align: center">
-          <a style="text-decoration: none" href="./samsung.html">
+          <a style="text-decoration: none" href="./iphone.html">
             <h1 class="cat-iphone" style="border: 2px solid black; color: black">iPhone</h1>
           </a>
           <img src="./images/iphone-logo-541.png" style="width: 100%; border: 2px solid black; height: 400px" alt="" />
