--- a/samsung.html
+++ b/samsung.html
@@ -87,6 +87,48 @@
                     <p>Price: $400</p>
                     <button type="button" class="btn btn-primary">Buy</button>
                 </div>
+                <div class="col-lg-3 col-md-6 mobile">
+                    <h3>Samsung Galaxy A01</h3>
+                    <img src="./images/Samsung-Galaxy-A01.jpg" alt="">
+                    <p>Samsung Galaxy A01 (4GB RAM)(64GB ROM) - red version</p>
+                    <p>Price: $200</p>
+                    <button type="button" class="btn btn-primary">Buy</button>
+                </div>
+                <div class="col-lg-3 col-md-6 mobile">
+                    <h3>Samsung Galaxy A01</h3>
+                    <img src="./images/Samsung-Galaxy-A01.jpg" alt="">
+                    <p>Samsung Galaxy A01 (4GB RAM)(64GB ROM) - red version</p>
+                    <p>Price: $200</p>
+                    <button type="button" class="btn btn-primary">Buy</button>
+                </div>
+                <div class="col-lg-3 col-md-6 mobile">
+                    <h3>Samsung Galaxy A01</h3>
+                    <img src="./images/Samsung-Galaxy-A01.jpg" alt="">
+                    <p>Samsung Galaxy A01 (4GB RAM)(64GB ROM) - red version</p>
+                    <p>Price: $200</p>
+                    <button type="button" class="btn btn-primary">Buy</button>
+                </div>
+                <div class="col-lg-3 col-md-6 mobile">
+                    <h3>Samsung Galaxy A01</h3>
+                    <img src="./images/Samsung-Galaxy-A01.jpg" alt="">
+                    <p>Samsung Galaxy A01 (4GB RAM)(64GB ROM) - red version</p>
+                    <p>Price: $200</p>
+                    <button type="button" class="btn btn-primary">Buy</button>
+                </div>
+                <div class="col-lg-3 col-md-6 mobile">
+                    <h3>Samsung Galaxy A01</h3>
+                    <img src="./images/Samsung-Galaxy-A01.jpg" alt="">
+                    <p>Samsung Galaxy A01 (4GB RAM)(64GB ROM) - red version</p>
+                    <p>Price: $200</p>
+                    <button type="button" class="btn btn-primary">Buy</button>
+                </div>
+                <div class="col-lg-3 col-md-6 mobile">
+                    <h3>Samsung Galaxy A01</h3>
+                    <img src="./images/Samsung-Galaxy-A01.jpg" alt="">
+                    <p>Samsung Galaxy A01 (4GB RAM)(64GB ROM) - red version</p>
+                    <p>Price: $200</p>
+                    <button type="button" class="btn btn-primary">Buy</button>
+                </div>
 
             </div>
         </div>
