Created products Page

--- a/samsung.html
+++ b/samsung.html
@@ -42,17 +42,9 @@
 
                         </div>
                     </li>
+
                     <li class="nav-item">
-                        <a class="nav-link" href="/franchise">FRANCHISE</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/news">NEWS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/aboutus">ABOUT US</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/#contact-us">CONTACT US</a>
+                        <a href="cart.html"> <i class="fa fa-2x fa-shopping-cart" aria-hidden="true"></i> </a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
@@ -62,25 +54,132 @@
             </div>
         </nav>
     </header>
+    <section style="height:500px">
+        <div class="container-fluid">
+            <div class="row" style="padding: 1% 0;">
+                <div class="col-md-3">
+                    <div class="iphone">
+                        <h1>Iphone12</h1>
+
+                        <img src="./images/iphon12.jfif" style="height:150px;" alt="">
+
+                        <div class="description">
+                            New Apple iPhone 12 Mini (128GB, Green)
+                        </div>
+                        <p>Price:$779.00</p>
+                        <button type="button" class="btn btn-warning">Buy</button>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="iphone">
+                        <h1>Iphone11</h1>
+                        <img src="./images/iphone11.jfif" style="height:150px;" alt="">
+                        <div class="description">
+                            Apple iPhone 11 (128GB) - Black (Verizon)
+                        </div>
+                        <p>price: $955.02</p>
+                        <button type="button" class="btn btn-warning">Buy</button>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="iphone">
+                        <h1>iphone8</h1>
+                        <img src="./images/6iphon.jfif" style="height:150px;" alt="">
+                        <div class="description">
+                            Apple iphone 6(64gb) - green version
+                        </div>
+                        <p>Price:$779.00</p>
+                        <button type="button" class="btn btn-warning">Buy</button>
+                    </div>
+                </div>
+                <div class="col-md-3 ">
+                    <h1>Iphone7</h1>
+                    <img src="./images/iphone7.jfif" style="height:150px;" class="img-fluid " alt="">
+                    <div class="description flex-center">
+                        Tracfone Apple iPhone 7 4G LTE Prepaid Smartphone - 32GB
+                        $199.00
+
+                    </div>
+                    <button type="button" class="btn btn-warning">Buy</button>
+                </div>
+
+
+
+
+                <div class="row" style="padding: 1% 0;">
+                    <div class="col-lg-3">
+                        <div class="iphone">
+                            <img src="./images/6iphon.jfif" style="height:150px;">
+                            <div class="description flex-center">
+                                Tracfone Apple iPhone 7 4G LTE Prepaid Smartphone - 32GB - Black - Carrier Locked
+                                $199.00
+
+                            </div>
+                            <button type="button" class="btn btn-warning">Buy</button>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="iphone">
+                            <img src="./images/6iphon.jfif" style="height:150px;">
+                            <div class="description flex-center">
+                                Tracfone Apple iPhone 7 4G LTE Prepaid Smartphone - 32GB - Black - Carrier Locked
+                                $199.00
+
+                            </div>
+                            <button type="button" class="btn btn-warning">Buy</button>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="iphone">
+                            <img src="./images/6iphon.jfif" style="height:150px;">
+                            <div class="description flex-center">
+                                Tracfone Apple iPhone 7 4G LTE Prepaid Smartphone - 32GB - Black - Carrier Locked
+                                $199.00
+
+                            </div>
+                            <button type="button" class="btn btn-warning">Buy</button>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="iphone">
+                            <img src="./images/6iphon.jfif" style="height:150px;">
+                            <div class="description flex-center">
+                                Tracfone Apple iPhone 7 4G LTE Prepaid Smartphone - 32GB - Black - Carrier Locked
+                                $199.00
+
+                            </div>
+                            <button type="button" class="btn btn-warning">Buy</button>
+                        </div>
+                    </div>
+
+
+                </div>
+
+            </div>
+    </section>
+
     <footer style="margin-top: 3%">
         <br />
         <div class="container">
             <div class="row">
                 <div class="col-lg-4">
-                    <h3>Get in Touch</h3>
+                    <h3 style="color: grey;">Get in Touch</h3>
                     <br />
-                    <p><i class="far fa-envelope"></i>&nbsp customercare@mobistore.com</p>
-                    <p><img src="./images/phone-alt-solid.svg" style="height: 17px" alt="" />&nbsp +92-337-9871230</p>
-                    <p><i class="fab fa-facebook fa-lg"></i>&nbsp <i class="fab fa-instagram fa-lg"></i></p>
+                    <p style="color: grey;"><i class="far fa-envelope"></i>&nbsp customercare@mobistore.com</p>
+                    <p style="color: grey;"><img src="./images/phone-alt-solid.svg" style="height: 17px" alt="" />&nbsp
+                        +92-337-9871230</p>
+                    <p style="color: grey;"><i class="fab fa-facebook fa-lg"></i>&nbsp <i
+                            class="fab fa-instagram fa-lg"></i></p>
+                </div>
+                <div class="col-lg-4" style="color: grey;">
+                    <h3 style="color: grey;">Our Company</h3>
+                    <br />
+                    <p style="color: grey;">Track Your Order</p>
+                    <p style="color: grey;">Terms & Condition</p>
                 </div>
                 <div class="col-lg-4">
-                    <h3>Our Company</h3>
-                    <br />
-                    <p>Track Your Order</p>
-                    <p>Terms & Condition</p>
-                </div>
-                <div class="col-lg-4">
-                    <p>Sign up for our newsletter to receive updates on special offers, news and events.</p>
+                    <p style="color: grey;">Sign up for our newsletter to receive updates on special offers, news and
+                        events.</p>
                     <form action="/">
                         <input type="email" name="email" />
                         <button>Subscribe</button>
