--- a/index.html
+++ b/index.html
@@ -44,17 +44,9 @@
 
             </div>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/franchise">FRANCHISE</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/news">NEWS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/aboutus">ABOUT US</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/#contact-us">CONTACT US</a>
+
+          <li class="nav-item" style="margin-right: 20px;">
+            <a href="cart.html"> <i class="fa fa-2x fa-shopping-cart" aria-hidden="true"></i> </a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
@@ -63,8 +55,7 @@
         </form>
       </div>
     </nav>
-  </header>
-  <!-- CAROUSEL SECTION -->
+  </header> <!-- CAROUSEL SECTION -->
   <section id="carousel">
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
@@ -89,7 +80,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6" style="text-align: center">
-          <a style="text-decoration: none" href="./samsung.html">
+          <a style="text-decoration: none" href="./iphone.html">
             <h1 class="cat-iphone" style="border: 2px solid black; color: black">iPhone</h1>
           </a>
           <img src="./images/iphone-logo-541.png" style="width: 100%; border: 2px solid black; height: 400px" alt="" />
@@ -123,7 +114,7 @@
     </div>
   </section>
 
-  <footer style="margin-top: 3%"  class = "page-footer font-small special-color-dark pt-4">
+  <footer style="margin-top: 3%">
     <br />
     <div class="container">
       <div class="row">
@@ -131,7 +122,8 @@
           <h3 style="color: grey;">Get in Touch</h3>
           <br />
           <p style="color: grey;"><i class="far fa-envelope"></i>&nbsp customercare@mobistore.com</p>
-          <p style="color: grey;"><img src="./images/phone-alt-solid.svg" style="height: 17px" alt="" />&nbsp +92-337-9871230</p>
+          <p style="color: grey;"><img src="./images/phone-alt-solid.svg" style="height: 17px" alt="" />&nbsp
+            +92-337-9871230</p>
           <p style="color: grey;"><i class="fab fa-facebook fa-lg"></i>&nbsp <i class="fab fa-instagram fa-lg"></i></p>
         </div>
         <div class="col-lg-4" style="color: grey;">
