--- a/products.html
+++ b/products.html
@@ -2,18 +2,62 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mobi Store</title>
     <!-- FONT AWSOME CDN -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
-    <link rel="stylesheet" href="./css/products.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/products.css" />
 </head>
 
 <body>
+    <!-- HEADER SECTION -->
+    <header>
+
+        <nav style="margin-top: -10px; border-bottom: 1px solid #8b0000; text-align: center;min-height: 20%; padding: 2%;"
+            class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand nav-logo" href="/"><span style="color: blue;font-size: 30px;">Mobi</span> <span
+                    style="color: red;font-size: 30px;">store</span></a>
+            <button style="margin-right: 29%;" class="navbar-toggler" type="button" data-toggle="collapse"
+                data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <ul class="navbar-nav ml-auto mt-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            Phone
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="iphone.html">Iphone</a>
+                            <a class="dropdown-item" href="samsung.html">Samsung</a>
+
+                        </div>
+                    </li>
+
+                    <li class="nav-item">
+                        <a href="cart.html"> <i class="fa fa-2x fa-shopping-cart" aria-hidden="true"></i> </a>
+                    </li>
+                </ul>
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+            </div>
+        </nav>
+    </header>
+
+
     <section>
         <div class="row">
             <div class="col-lg-6 left-side">
@@ -35,11 +79,105 @@
                     <li>64GB ROM</li>
                 </ul>
                 <button class="btn btn-outline-warning" style="display: block; margin-left: 25%;"><i
-                        class="fas fa-shopping-cart"></i>&nbsp Add To
-                    Cart</button>
+                        class="fas fa-shopping-cart"></i>&nbsp Add To Cart</button>
             </div>
         </div>
     </section>
+
+    <br><br><br>
+    <section>
+        <div class="container">
+            <h3>Other Suggestions</h3>
+
+
+            <div class="row">
+                <div class="col-lg-3 mobile">
+                    <div class="iphone">
+                        <h1>iphone8</h1>
+                        <img src="./images/6iphon.jfif" style="height:150px;">
+                        <div class="description flex-center">
+                            <br>
+                            <p>Tracfone Apple iPhone 7 4G LTE Prepaid Smartphone - 32GB - Black - Carrier Locked
+                                $199.00
+                            </p>
+                        </div>
+                        <button type="button" class="btn btn-warning">Buy</button>
+                    </div>
+                </div>
+                <div class="col-lg-3 mobile">
+                    <div class="iphone">
+                        <h1>iphone8</h1>
+                        <img src="./images/6iphon.jfif" style="height:150px;">
+                        <div class="description flex-center">
+                            <br>
+                            <p>Tracfone Apple iPhone 7 4G LTE Prepaid Smartphone - 32GB - Black - Carrier Locked
+                                $199.00
+                            </p>
+                        </div>
+                        <button type="button" class="btn btn-warning">Buy</button>
+                    </div>
+                </div>
+                <div class="col-lg-3 mobile">
+                    <div class="iphone">
+                        <h1>iphone8</h1>
+                        <img src="./images/6iphon.jfif" style="height:150px;">
+                        <div class="description flex-center">
+                            <br>
+                            <p>Tracfone Apple iPhone 7 4G LTE Prepaid Smartphone - 32GB - Black - Carrier Locked
+                                $199.00
+                            </p>
+                        </div>
+                        <button type="button" class="btn btn-warning">Buy</button>
+                    </div>
+                </div>
+                <div class="col-lg-3 mobile">
+                    <div class="iphone">
+                        <h1>iphone8</h1>
+                        <img src="./images/6iphon.jfif" style="height:150px;">
+                        <div class="description flex-center">
+                            <br>
+                            <p>Tracfone Apple iPhone 7 4G LTE Prepaid Smartphone - 32GB - Black - Carrier Locked
+                                $199.00
+                            </p>
+                        </div>
+                        <button type="button" class="btn btn-warning">Buy</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <footer style="margin-top: 3%">
+        <br />
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    <h3 style="color: grey;">Get in Touch</h3>
+                    <br />
+                    <p style="color: grey;"><i class="far fa-envelope"></i>&nbsp customercare@mobistore.com</p>
+                    <p style="color: grey;"><img src="./images/phone-alt-solid.svg" style="height: 17px" alt="" />&nbsp
+                        +92-337-9871230</p>
+                    <p style="color: grey;"><i class="fab fa-facebook fa-lg"></i>&nbsp <i
+                            class="fab fa-instagram fa-lg"></i></p>
+                </div>
+                <div class="col-lg-4" style="color: grey;">
+                    <h3 style="color: grey;">Our Company</h3>
+                    <br />
+                    <p style="color: grey;">Track Your Order</p>
+                    <p style="color: grey;">Terms & Condition</p>
+                </div>
+                <div class="col-lg-4">
+                    <p style="color: grey;">Sign up for our newsletter to receive updates on special offers, news and
+                        events.</p>
+                    <form action="/">
+                        <input type="email" name="email" />
+                        <button>Subscribe</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <br />
+    </footer>
 </body>
 
 </html>
