--- a/iphone.html
+++ b/iphone.html
@@ -34,8 +34,8 @@
                 Phone
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">Iphone</a>
-                <a class="dropdown-item" href="#">Samsung</a>
+                <a class="dropdown-item" href="iphone.html">Iphone</a>
+                <a class="dropdown-item" href="samsung.html">Samsung</a>
                 
               </div>
             </li>
