--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     </div>
   </section>
 
-  <footer style="margin-top: 3%"  class = "page-footer font-small special-color-dark pt-4">
+  <footer style="margin-top: 3%"  >
     <br />
     <div class="container">
       <div class="row">
