--- a/cart.html
+++ b/cart.html
@@ -54,6 +54,47 @@
     </div>
 </nav>
 </header>
+<!-- main body section-->
+
+<section class="cart">
+<div class="container">
+<div class="row">
+<div class="col-lg-3">
+<h2>product</h2>
+ <img src="images/6iphon.jfif"  style="height: 100px;" alt="">
+
+</div>
+
+<div class="col-lg-3">
+<h2>description</h2>
+This is Apple iphone 6(64gb) - green versio
+</div>
+
+<div class="col-lg-3">
+  <h2>Price</h2>
+  <p>Price:$779.00</p>
+
+
+</div>
+<div class="col-lg-3">
+  <h2>quantity</h2>
+  <p>1</p>
+
+</div>
+
+
+
+</div>
+
+
+
+
+</div>
+
+
+</section>
+
+
 <footer style="margin-top: 3%"  >
     <br />
     <div class="container">
