--- a/cart.html
+++ b/cart.html
@@ -15,7 +15,6 @@
 </head>
 
 <body>
-  <!-- HEADER SECTION -->
   <header>
     
     <nav style="margin-top: -10px; border-bottom: 1px solid #8b0000; text-align: center;min-height: 20%; padding: 2%;"
@@ -30,10 +29,10 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav ml-auto mt-lg-0">
             <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" style="font-size: 20px;" href="index.html">Home</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" style="font-size: 20px;" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Phone
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -44,7 +43,7 @@
             </li>
            
             <li class="nav-item">
-            <a href="cart.html">  <i class="fa fa-2x fa-shopping-cart" aria-hidden="true"></i> </a>
+            <a href="cart.html">  <i class="fa fa-2x fa-shopping-cart" style="margin-right:20px;margin-top: 10px ;" aria-hidden="true"></i> </a>
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
