--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 </head>
 
 <body>
-  <!-- HEADER SECTION -->
   <header>
 
     <nav style="margin-top: -10px; border-bottom: 1px solid #8b0000; text-align: center;min-height: 20%; padding: 2%;"
@@ -44,6 +43,9 @@
 
             </div>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" style="font-size: 20px;" href="login.html">Login</a>
+          </li>
 
           <li class="nav-item">
             <a href="cart.html"> <i class="fa fa-2x fa-shopping-cart" style="margin-right:20px;margin-top: 10px ;"
@@ -56,7 +58,11 @@
         </form>
       </div>
     </nav>
-  </header> <!-- CAROUSEL SECTION -->
+  </header>
+
+<!-- This snippet uses Font Awesome 5 Free as a dependency. You can download it at fontawesome.io! -->
+
+   <!-- CAROUSEL SECTION -->
   <section id="carousel">
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
@@ -115,10 +121,9 @@
     </div>
   </section>
 
-  <<<<<<< HEAD <footer style="margin-top: 3%">
-    =======
+
     <footer style="margin-top: 3%">
-      >>>>>>> bb5c76a7467b1e65f55636dfb4acfd3924d50e93
+    
       <br />
       <div class="container">
         <div class="row">
