--- a/login.html
+++ b/login.html
@@ -8,13 +8,14 @@
   <!-- FONT AWSOME CDN -->
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
   <!-- CSS only -->
-  <link rel="stylesheet" href= 
-  "https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"> 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
+  <!-- HEADER SECTION -->
   <header>
 
     <nav style="margin-top: -10px; border-bottom: 1px solid #8b0000; text-align: center;min-height: 20%; padding: 2%;"
@@ -62,48 +63,42 @@
 
 <!-- This snippet uses Font Awesome 5 Free as a dependency. You can download it at fontawesome.io! -->
 
-<!-- main body section-->
 
-<section class="cart">
-<div class="container">
-<div class="row">
-<div class="col-lg-3">
-<h2>product</h2>
- <img src="images/6iphon.jfif"  style="height: 100px;" alt="">
-
-</div>
-
-<div class="col-lg-3">
-<h2>description</h2>
-This is Apple iphone 6(64gb) - green versio
-</div>
-
-<div class="col-lg-3">
-  <h2>Price</h2>
-  <p>Price:$779.00</p>
-
-
-</div>
-<div class="col-lg-3">
-  <h2>quantity</h2>
-  <p>1</p>
-
-</div>
-
-
-
-</div>
-
-
-
-
-</div>
-
-
-</section>
-
-
-<footer style="margin-top: 3%"  >
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+          <div class="card card-signin my-5">
+            <div class="card-body">
+              <h5 class="card-title text-center">Sign In</h5>
+              <form class="form-signin">
+                <div class="form-label-group">
+                  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+                  <label for="inputEmail">Email address</label>
+                </div>
+  
+                <div class="form-label-group">
+                  <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                  <label for="inputPassword">Password</label>
+                </div>
+  
+                <div class="custom-control custom-checkbox mb-3">
+                  <input type="checkbox" class="custom-control-input" id="customCheck1">
+                  <label class="custom-control-label" for="customCheck1">Remember password</label>
+                </div>
+                <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign in</button>
+                <hr class="my-4">
+                <button class="btn btn-lg btn-google btn-block text-uppercase" type="submit"><i class="fab fa-google mr-2"></i> Sign in with Google</button>
+                <button class="btn btn-lg btn-facebook btn-block text-uppercase" type="submit"><i class="fab fa-facebook-f mr-2"></i> Sign in with Facebook</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  
+  
+<footer style="margin-top: 3%">
+    
     <br />
     <div class="container">
       <div class="row">
@@ -111,8 +106,10 @@ This is Apple iphone 6(64gb) - green versio
           <h3 style="color: grey;">Get in Touch</h3>
           <br />
           <p style="color: grey;"><i class="far fa-envelope"></i>&nbsp customercare@mobistore.com</p>
-          <p style="color: grey;"><img src="./images/phone-alt-solid.svg" style="height: 17px" alt="" />&nbsp +92-337-9871230</p>
-          <p style="color: grey;"><i class="fab fa-facebook fa-lg"></i>&nbsp <i class="fab fa-instagram fa-lg"></i></p>
+          <p style="color: grey;"><img src="./images/phone-alt-solid.svg" style="height: 17px" alt="" />&nbsp
+            +92-337-9871230</p>
+          <p style="color: grey;"><i class="fab fa-facebook fa-lg"></i>&nbsp <i class="fab fa-instagram fa-lg"></i>
+          </p>
         </div>
         <div class="col-lg-4" style="color: grey;">
           <h3 style="color: grey;">Our Company</h3>
@@ -121,7 +118,8 @@ This is Apple iphone 6(64gb) - green versio
           <p style="color: grey;">Terms & Condition</p>
         </div>
         <div class="col-lg-4">
-          <p style="color: grey;">Sign up for our newsletter to receive updates on special offers, news and events.</p>
+          <p style="color: grey;">Sign up for our newsletter to receive updates on special offers, news and events.
+          </p>
           <form action="/">
             <input type="email" name="email" />
             <button>Subscribe</button>
@@ -135,19 +133,19 @@ This is Apple iphone 6(64gb) - green versio
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
     crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.js"
+    integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 
-  
-    <script type="text/javascript" src="js/bootstrap/bootstrap-dropdown.js"></script>
-<script>
-     $(document).ready(function(){
-        $('.dropdown-toggle').dropdown()
+
+  <script type="text/javascript" src="js/bootstrap/bootstrap-dropdown.js"></script>
+  <script>
+    $(document).ready(function () {
+      $('.dropdown-toggle').dropdown()
     });
-</script>
+  </script>
 </body>
 
 </html>
