made signup form

--- a/cart.html
+++ b/cart.html
@@ -46,6 +46,9 @@
           <li class="nav-item">
             <a class="nav-link" style="font-size: 20px;" href="login.html">Login</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" style="font-size: 20px;" href="signup.html">signup</a>
+          </li>
 
           <li class="nav-item">
             <a href="cart.html"> <i class="fa fa-2x fa-shopping-cart" style="margin-right:20px;margin-top: 10px ;"
@@ -90,7 +93,28 @@ This is Apple iphone 6(64gb) - green versio
 
 </div>
 
-
+<div class="col-lg-3">
+  <h2>product</h2>
+   <img src="images/6iphon.jfif"  style="height: 100px;" alt="">
+  
+  </div>
+  
+  <div class="col-lg-3">
+  <h2>description</h2>
+  This is Apple iphone 6(64gb) - green versio
+  </div>
+  
+  <div class="col-lg-3">
+    <h2>Price</h2>
+    <p>Price:$779.00</p>
+  
+  
+  </div>
+  <div class="col-lg-3">
+    <h2>quantity</h2>
+    <p>1</p>
+  
+  </div>
 
 </div>
 
@@ -101,7 +125,11 @@ This is Apple iphone 6(64gb) - green versio
 
 
 </section>
-
+<br>
+<br>
+<br>
+<br>
+<br>
 
 <footer style="margin-top: 3%"  >
     <br />
