--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
           <li class="nav-item">
             <a class="nav-link" style="font-size: 20px;" href="login.html">Login</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" style="font-size: 20px;" href="signup.html">signup</a>
+          </li>
 
           <li class="nav-item">
             <a href="cart.html"> <i class="fa fa-2x fa-shopping-cart" style="margin-right:20px;margin-top: 10px ;"
