--- a/signup.html
+++ b/signup.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/login.css" />
+  <link rel="stylesheet" href="css/signup.css" />
 </head>
 
 <body>
@@ -63,6 +63,7 @@
       </div>
     </nav>
   </header>
+
 <!-- This snippet uses Font Awesome 5 Free as a dependency. You can download it at fontawesome.io! -->
 
 
@@ -74,22 +75,32 @@
               <h5 class="card-title text-center">Sign In</h5>
               <form class="form-signin">
                 <div class="form-label-group">
-                  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-                  <label for="inputEmail">Email address</label>
+                  <input type="name" id="inputname" class="form-control" placeholder="User name" required autofocus>
+                  <label for="inputname">user name</label>
                 </div>
+
+                <div class="form-label-group">
+                    <input type="name" id="inputemail" class="form-control" placeholder="email" required autofocus>
+                    <label for="inputemail">Type in your email</label>
+                  </div>
+
+                  <div class="form-label-group">
+                    <input type="name" id="inputpassword" class="form-control" placeholder="Password" required autofocus>
+                    <label for="inputpassword">password</label>
+                  </div>
   
                 <div class="form-label-group">
-                  <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-                  <label for="inputPassword">Password</label>
+                  <input type="password" id="inputconfirmPassword" class="form-control" placeholder="Password" required>
+                  <label for="inputconfirmPassword">Confirm Password</label>
                 </div>
   
                 <div class="custom-control custom-checkbox mb-3">
                   <input type="checkbox" class="custom-control-input" id="customCheck1">
                   <label class="custom-control-label" for="customCheck1">Remember password</label>
                 </div>
-                <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign in</button>
+                <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign up</button>
                 <hr class="my-4">
-              
+                
               </form>
             </div>
           </div>
