deleting the subscribe from footer

--- a/iphone.html
+++ b/iphone.html
@@ -239,39 +239,31 @@
     </section>
 
     <footer style="margin-top: 3%">
+    
         <br />
         <div class="container">
-            <div class="row">
-                <div class="col-lg-4">
-                    <h3 style="color: grey;">Get in Touch</h3>
-                    <br />
-                    <p style="color: grey;"><i class="far fa-envelope"></i>&nbsp customercare@mobistore.com</p>
-                    <p style="color: grey;"><img src="./images/phone-alt-solid.svg" style="height: 17px" alt="" />&nbsp
-                        +92-337-9871230</p>
-                    <p style="color: grey;"><i class="fab fa-facebook fa-lg"></i>&nbsp <i
-                            class="fab fa-instagram fa-lg"></i></p>
-                </div>
-                <div class="col-lg-4" style="color: grey;">
-                    <h3 style="color: grey;">Our Company</h3>
-                    <br />
-                    <p style="color: grey;">Track Your Order</p>
-                    <p style="color: grey;">Terms & Condition</p>
-                </div>
-                <div class="col-lg-4">
-                    <p style="color: grey;">Sign up for our newsletter to receive updates on special offers, news and
-                        events.</p>
-                    <form action="/">
-                        <input type="email" name="email" />
-                        <button>Subscribe</button>
-                    </form>
-                </div>
+          <div class="row">
+            <div class="col-lg-6">
+              <h3 style="color: grey;">Get in Touch</h3>
+              <br />
+              <p style="color: grey;"><i class="far fa-envelope"></i>&nbsp customercare@mobistore.com</p>
+              <p style="color: grey;"><img src="./images/phone-alt-solid.svg" style="height: 17px" alt="" />&nbsp
+                +92-337-9871230</p>
+              <p style="color: grey;"><i class="fab fa-facebook fa-lg"></i>&nbsp <i class="fab fa-instagram fa-lg"></i>
+              </p>
             </div>
-        </div>
-
-        </div>
+            <div class="col-lg-6" style="color: grey;">
+              <h3 style="color: grey;">Our Company</h3>
+              <br />
+              <p style="color: grey;">Track Your Order</p>
+              <p style="color: grey;">Terms & Condition</p>
+            </div>
+         
+            </div>
+          </div>
         </div>
         <br />
-    </footer>
+      </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
